--- a/MemberRegistration.MvcWebUI/Views/Member/Add.cshtml
+++ b/MemberRegistration.MvcWebUI/Views/Member/Add.cshtml
@@ -14,6 +14,7 @@
             <div class="py-5 text-center">
                 <h2>Kayıt Formu</h2>
                 <p class="lead">Lütfen bilgilerinizi giriniz</p>
+                <p class="lead">@Html.ValidationMessage("MemberException")</p>
             </div>
 
             <div class="row ">
